--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,12 +66,8 @@ services:
       # specify the model directory (likely you don't need to change this)
       - MODEL_DIR=/data/models
       # mmdetection model parameters
-      # - CHECKPOINT_FILE=yolov3_mobilenetv2_320_300e_coco_20210719_215349-d18dff72.pth
-      # - CONFIG_FILE=yolov3_mobilenetv2_8xb24-320-300e_coco.py
-      - CHECKPOINT_FILE=/data/models/rtmdet_l_8xb32-300e_coco_20220719_112030-5a0be7c4.pth
-      - CONFIG_FILE=/data/models/rtmdet_l_8xb32-300e_coco.py 
-      # - CHECKPOINT_FILE=/data/models/rtmdet_tiny_8xb32-300e_coco_20220902_112414-78e30dcc.pth
-      # - CONFIG_FILE=/data/models/rtmdet_tiny_8xb32-300e_coco.py 
+      - CHECKPOINT_FILE=${CHECKPOINT_FILE}
+      - CONFIG_FILE=${CONFIG_FILE}
       - DEVICE=cpu
       - SCORE_THRESHOLD=0.5
 
