--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     #      - NGINX_SSL_CERT=/certs/cert.pem
     #      - NGINX_SSL_CERT_KEY=/certs/cert.key
     volumes:
-      - label-studio-data:/label-studio/data:rw
+      - data:/label-studio/data:rw
       # - ./deploy/nginx/certs:/certs:ro
       #   Optional: Override nginx default conf
       #      - ./deploy/my.conf:/etc/nginx/nginx.conf
@@ -44,7 +44,7 @@ services:
       - JSON_LOG=1
     #      - LOG_LEVEL=DEBUG
     volumes:
-      - label-studio-data:/label-studio/data:rw
+      - data:/label-studio/data:rw
     command: label-studio-uwsgi
 
   # https://github.com/HumanSignal/label-studio-ml-backend/blob/master/label_studio_ml/examples/mmdetection-3/docker-compose.yml
@@ -111,16 +111,16 @@ services:
 
 
 volumes:
-  label-studio-data:
+  data:
     driver: local
     driver_opts:
-      type: "nfs"
-      o: "addr=192.168.0.7,rw,nfsvers=4"
-      device: ":/data/label-studio"
+      type: "cifs"
+      device: "//192.168.0.12/data/"
+      o: "username=${CIFS_USERNAME},password=${CIFS_PASSWORD},file_mode=0777,dir_mode=0777"
 
   models:
     driver: local
     driver_opts:
-      type: "nfs"
-      o: "addr=192.168.0.7,rw,nfsvers=4"
-      device: ":/data/models"
+      type: "cifs"
+      device: "//192.168.0.12/models"
+      o: "username=${CIFS_USERNAME},password=${CIFS_PASSWORD},file_mode=0777,dir_mode=0777"
